--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,1 +1,5 @@
-To test out the sample REST endpoint, hit /hello
+<h3>To test out the sample REST endpoint, hit /hello
+<a href="hello">Hello</a>
+<br>
+<a href="result">Show Result</a>
+
